# experiments

./: .gitignore  .ruff.toml
agents/notebooks/: NB1_Agents.ipynb
agents_sdk/notebooks/: NB1_Agents_SDK.ipynb
chat-app/: package-lock.json  package.json
chatkit/backend/: pyproject.toml
chatkit/frontend/: index.html  package-lock.json  package.json
chatkit_demo/backend/: README.md  main.py  mcp_server.py  pyproject.toml
chatkit_demo/backend/app/: assistant.py  chatkit_app.py  config.py  mcp.py  products.py  store.py
chatkit_demo/backend/app/widgets/: simple_product.widget
chatkit_demo/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
chatkit_demo/frontend/src/: App.tsx
function_calling/chat-app/src/: App.tsx
function_calling/notebooks/: NB1_Function_Calling.ipynb
function_calling/server/: __init__.py  ai.py  app.py  logger.py  schema.py
mcp_demo/: mcp_client.py  mcp_server.py  pyproject.toml
random/: NB2_Rounder.ipynb
response_api/notebooks/: NB1_Response_API.ipynb
server/: ai.py  app.py
